# softki

./: .gitignore  README.md  ablation.sh  benchmark.sh  download_data.sh  inducing.sh  noise.sh  pyproject.toml  run.py  run_all.sh  run_all2.sh  run_all_1024.sh  run_all_512.sh  run_all_use_threshold.sh  run_exact.sh  run_inducing.sh  run_md22.sh  run_noise.sh  setup.py  test.ipynb  train.py
_deprecated/: SoftGp_profile.ipynb  noise2.ipynb  requirements.txt  setup.py
_deprecated/chris_notebooks/: 2_KRR.ipynb  3_NystKRR.ipynb  4_SVGP.ipynb  5_Comparison.ipynb  6_UCI.ipynb  7_KISSGP.ipynb
analysis/: .gitignore  CG_testing.ipynb  CG_testing2.ipynb  SoftGp_profile.ipynb  ablation.ipynb  comparison.ipynb  inducing.ipynb  md22.ipynb  nohutch.ipynb  noise.ipynb  threshold_T.ipynb  util.py  visualize.ipynb
chris_notebooks/: 1_GP.ipynb  2_KRR.ipynb  3_GPvsKRR.ipynb  3_NystKRR.ipynb  4_NystKRR.ipynb  5_Comparison.ipynb  5_SVGP.ipynb  8_interpolation.ipynb  regression_models.py
data/: .gitignore  README.md  get_md22.py  get_uci.py
exp/: README.md  run_ard.sh  run_learnT.sh  run_md22.sh  run_md22_ard.sh  run_uci.sh  run_uci_nonoise.sh  run_use_threshold.sh
exp/analysis/: .gitignore  CG_testing2.ipynb  noise.ipynb  uci.ipynb  util.py
gp/: mll.py  soft_gp.py  train.py  util.py
gp/exact/: mll.py  model.py  train.py
gp/exact_gp/: exact_gp.py  train.py
gp/sgpr/: train.py
linear_solver/: cg.py  preconditioner.py
scripts/: README.md  run_all.sh  run_all_scale.sh  run_exact.sh  run_inducing.sh  run_learnT.sh  run_md22.sh  run_noise.sh  run_scale.sh  run_uci.sh
(+14 files in other folders)
